--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mood Color Diary</title>
+    <title>Mood Color Diary (Pie Chart)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,17 +14,11 @@
         .toolbox {
             margin: 20px 0;
         }
-        .day {
-            width: 40px;
-            height: 40px;
-            display: inline-block;
-            margin: 5px;
+        canvas {
             border: 1px solid #ccc;
-            cursor: pointer;
-        }
-        #diary {
-            max-width: 600px;
-            margin: 0 auto;
+            background: white;
+            margin: 10px auto;
+            display: block;
         }
         input, button {
             padding: 8px;
@@ -33,12 +27,14 @@
         #periodFilter {
             margin-top: 10px;
         }
+        #legend {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
-    <h2>Mood Color Diary</h2>
+    <h2>Mood Color Diary (Pie Chart)</h2>
     <div class="toolbox">
-        <input type="color" id="moodColor" value="#ffffff">
         <input type="date" id="moodDate">
         <button onclick="addMood()">Προσθήκη Διάθεσης</button>
     </div>
@@ -48,39 +44,81 @@
         <input type="date" id="endDate">
         <button onclick="filterMoods()">Εφαρμογή</button>
     </div>
-    <div id="diary"></div>
+    <canvas id="moodCanvas" width="400" height="400"></canvas>
+    <div id="legend"></div>
 
     <script>
-        let moods = JSON.parse(localStorage.getItem('moods')) || [];
+        const canvas = document.getElementById('moodCanvas');
+        const ctx = canvas.getContext('2d');
+        const colors = ['#FFFF00', '#FFA500', '#FF0000']; // Κίτρινο, Πορτοκαλί, Κόκκινο
 
-        // Εμφάνιση ημερολογίου
-        function renderDiary(filteredMoods = moods) {
-            const diary = document.getElementById('diary');
-            diary.innerHTML = '';
-            filteredMoods.sort((a, b) => new Date(a.date) - new Date(b.date)); // Ταξινόμηση κατά ημερομηνία
+        // Λειτουργίες για χειρισμό cookies
+        function setCookie(name, value) {
+            document.cookie = `${name}=${encodeURIComponent(JSON.stringify(value))}; path=/`; // Χωρίς expires για μονιμότητα
+        }
 
-            filteredMoods.forEach(mood => {
-                const div = document.createElement('div');
-                div.className = 'day';
-                div.style.backgroundColor = mood.color;
-                div.title = `Ημερομηνία: ${new Date(mood.date).toLocaleDateString('el-GR')}`;
-                diary.appendChild(div);
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return JSON.parse(decodeURIComponent(parts.pop().split(';').shift()));
+            return null;
+        }
+
+        // Φόρτωση moods από cookie ή κενή λίστα
+        let moods = getCookie('moods') || [];
+
+        // Εμφάνιση πίτας
+        function renderPieChart(filteredMoods = moods) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            const centerX = canvas.width / 2;
+            const centerY = canvas.height / 2;
+            const radius = Math.min(centerX, centerY) - 20;
+            const total = filteredMoods.length || 1;
+            const sliceAngle = (2 * Math.PI) / total;
+
+            filteredMoods.sort((a, b) => new Date(a.date) - new Date(b.date));
+
+            filteredMoods.forEach((mood, index) => {
+                const startAngle = index * sliceAngle;
+                const endAngle = startAngle + sliceAngle;
+
+                ctx.beginPath();
+                ctx.moveTo(centerX, centerY);
+                ctx.arc(centerX, centerY, radius, startAngle, endAngle);
+                ctx.fillStyle = colors[mood.state % 3];
+                ctx.fill();
+                ctx.stroke();
             });
 
+            updateLegend(filteredMoods);
             if (filteredMoods.length === 0) {
-                diary.innerHTML = '<p>Δεν υπάρχουν διαθέσεις για αυτή την περίοδο.</p>';
+                ctx.fillStyle = '#000';
+                ctx.fillText('Δεν υπάρχουν διαθέσεις για αυτή την περίοδο.', centerX - 100, centerY);
             }
         }
 
-        // Προσθήκη νέας διάθεσης
+        // Ενημέρωση λεζάντας
+        function updateLegend(filteredMoods) {
+            const legend = document.getElementById('legend');
+            legend.innerHTML = filteredMoods.map(mood => 
+                `<span style="color: ${colors[mood.state % 3]}">■</span> ${new Date(mood.date).toLocaleDateString('el-GR')}`
+            ).join('<br>');
+        }
+
+        // Προσθήκη διάθεσης
         function addMood() {
-            const color = document.getElementById('moodColor').value;
             const dateInput = document.getElementById('moodDate').value;
             const date = dateInput ? new Date(dateInput).toISOString() : new Date().toISOString();
 
-            moods.push({ color, date });
-            localStorage.setItem('moods', JSON.stringify(moods));
-            renderDiary();
+            const existingMood = moods.find(m => new Date(m.date).toDateString() === new Date(date).toDateString());
+            if (existingMood) {
+                existingMood.state = (existingMood.state + 1) % 3;
+            } else {
+                moods.push({ date, state: 0 });
+            }
+
+            setCookie('moods', moods); // Αποθήκευση σε cookie
+            renderPieChart();
         }
 
         // Φιλτράρισμα διάθεσης ανά περίοδο
@@ -98,11 +136,28 @@
                 return moodDate >= startDate && moodDate <= endDate;
             });
 
-            renderDiary(filteredMoods);
+            renderPieChart(filteredMoods);
         }
 
+        // Χειρισμός κλικ στον καμβά
+        canvas.addEventListener('click', (e) => {
+            const rect = canvas.getBoundingClientRect();
+            const x = e.clientX - rect.left - canvas.width / 2;
+            const y = e.clientY - rect.top - canvas.height / 2;
+            const angle = Math.atan2(y, x) < 0 ? Math.atan2(y, x) + 2 * Math.PI : Math.atan2(y, x);
+            const total = moods.length || 1;
+            const sliceAngle = (2 * Math.PI) / total;
+            const clickedSlice = Math.floor(angle / sliceAngle);
+
+            if (clickedSlice < moods.length) {
+                moods[clickedSlice].state = (moods[clickedSlice].state + 1) % 3;
+                setCookie('moods', moods); // Ενημέρωση cookie
+                renderPieChart();
+            }
+        });
+
         // Αρχική εμφάνιση
-        renderDiary();
+        renderPieChart();
 
         // Προεπιλογή σημερινής ημερομηνίας
         document.getElementById('moodDate').value = new Date().toISOString().split('T')[0];
