--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         #legend {
             margin-top: 10px;
         }
+        #debug {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -46,15 +50,16 @@
     </div>
     <canvas id="moodCanvas" width="400" height="400"></canvas>
     <div id="legend"></div>
+    <div id="debug"></div>
 
     <script>
         const canvas = document.getElementById('moodCanvas');
         const ctx = canvas.getContext('2d');
         const colors = ['#FFFF00', '#FFA500', '#FF0000']; // Κίτρινο, Πορτοκαλί, Κόκκινο
 
-        // Λειτουργίες για χειρισμό cookies
+        // Λειτουργίες για cookies
         function setCookie(name, value) {
-            document.cookie = `${name}=${encodeURIComponent(JSON.stringify(value))}; path=/`; // Χωρίς expires για μονιμότητα
+            document.cookie = `${name}=${encodeURIComponent(JSON.stringify(value))}; path=/`;
         }
 
         function getCookie(name) {
@@ -64,8 +69,9 @@
             return null;
         }
 
-        // Φόρτωση moods από cookie ή κενή λίστα
+        // Φόρτωση moods από cookie ή αρχικοποίηση
         let moods = getCookie('moods') || [];
+        document.getElementById('debug').innerText = `Αρχικά δεδομένα από cookie: ${JSON.stringify(moods)}`;
 
         // Εμφάνιση πίτας
         function renderPieChart(filteredMoods = moods) {
@@ -78,6 +84,7 @@
 
             filteredMoods.sort((a, b) => new Date(a.date) - new Date(b.date));
 
+            // Σχεδίαση φετών
             filteredMoods.forEach((mood, index) => {
                 const startAngle = index * sliceAngle;
                 const endAngle = startAngle + sliceAngle;
@@ -85,15 +92,17 @@
                 ctx.beginPath();
                 ctx.moveTo(centerX, centerY);
                 ctx.arc(centerX, centerY, radius, startAngle, endAngle);
+                ctx.closePath();
                 ctx.fillStyle = colors[mood.state % 3];
                 ctx.fill();
+                ctx.strokeStyle = '#000';
                 ctx.stroke();
             });
 
             updateLegend(filteredMoods);
             if (filteredMoods.length === 0) {
                 ctx.fillStyle = '#000';
-                ctx.fillText('Δεν υπάρχουν διαθέσεις για αυτή την περίοδο.', centerX - 100, centerY);
+                ctx.fillText('Δεν υπάρχουν διαθέσεις.', centerX - 80, centerY);
             }
         }
 
@@ -108,7 +117,11 @@
         // Προσθήκη διάθεσης
         function addMood() {
             const dateInput = document.getElementById('moodDate').value;
-            const date = dateInput ? new Date(dateInput).toISOString() : new Date().toISOString();
+            if (!dateInput) {
+                alert('Παρακαλώ διάλεξε ημερομηνία!');
+                return;
+            }
+            const date = new Date(dateInput).toISOString();
 
             const existingMood = moods.find(m => new Date(m.date).toDateString() === new Date(date).toDateString());
             if (existingMood) {
@@ -117,11 +130,12 @@
                 moods.push({ date, state: 0 });
             }
 
-            setCookie('moods', moods); // Αποθήκευση σε cookie
+            setCookie('moods', moods);
+            document.getElementById('debug').innerText = `Ενημερωμένα δεδομένα: ${JSON.stringify(moods)}`;
             renderPieChart();
         }
 
-        // Φιλτράρισμα διάθεσης ανά περίοδο
+        // Φιλτράρισμα διάθεσης
         function filterMoods() {
             const startDate = new Date(document.getElementById('startDate').value);
             const endDate = new Date(document.getElementById('endDate').value);
@@ -139,7 +153,7 @@
             renderPieChart(filteredMoods);
         }
 
-        // Χειρισμός κλικ στον καμβά
+        // Χειρισμός κλικ
         canvas.addEventListener('click', (e) => {
             const rect = canvas.getBoundingClientRect();
             const x = e.clientX - rect.left - canvas.width / 2;
@@ -151,7 +165,8 @@
 
             if (clickedSlice < moods.length) {
                 moods[clickedSlice].state = (moods[clickedSlice].state + 1) % 3;
-                setCookie('moods', moods); // Ενημέρωση cookie
+                setCookie('moods', moods);
+                document.getElementById('debug').innerText = `Μετά το κλικ: ${JSON.stringify(moods)}`;
                 renderPieChart();
             }
         });
