--- a/index.html
+++ b/index.html
@@ -3,71 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mood Color Diary (Grid)</title>
+    <title>To-Do List</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            text-align: center;
             background-color: #f0f0f0;
+            text-align: center;
         }
         .toolbox {
             margin: 20px 0;
         }
-        #grid {
-            max-width: 350px;
-            margin: 10px auto;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 5px;
+        input, button {
+            padding: 8px;
+            margin: 5px;
+        }
+        #tasks {
+            max-width: 600px;
+            margin: 0 auto;
         }
         .day {
-            width: 40px;
-            height: 40px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            position: relative;
-        }
-        #colorChoices {
-            position: absolute;
-            display: none;
+            margin: 20px 0;
+            padding: 10px;
             background: white;
             border: 1px solid #ccc;
-            padding: 5px;
-            z-index: 10;
+            border-radius: 5px;
         }
-        .colorOption {
-            width: 20px;
-            height: 20px;
-            display: inline-block;
-            margin: 5px;
+        .task {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 5px 0;
+            padding: 5px;
+            border-bottom: 1px solid #eee;
+        }
+        .delete-btn {
+            background: #ff4444;
+            color: white;
+            border: none;
+            padding: 5px 10px;
             cursor: pointer;
         }
-        #legend {
-            margin-top: 10px;
+        .delete-btn:hover {
+            background: #cc0000;
         }
     </style>
 </head>
 <body>
-    <h2>Mood Color Diary (Grid)</h2>
+    <h2>To-Do List</h2>
     <div class="toolbox">
-        <button onclick="addNewDay()">Προσθήκη Νέας Ημέρας</button>
-        <button onclick="confirmDelete()">Διαγραφή Όλων</button>
+        <input type="text" id="taskInput" placeholder="Εργασία">
+        <input type="time" id="taskTime">
+        <input type="date" id="taskDate">
+        <button onclick="addTask()">Προσθήκη Εργασίας</button>
     </div>
-    <div id="grid"></div>
-    <div id="legend"></div>
-    <div id="colorChoices">
-        <div class="colorOption" style="background-color: #FFFF00" onclick="selectColor(0)"></div>
-        <div class="colorOption" style="background-color: #FFA500" onclick="selectColor(1)"></div>
-        <div class="colorOption" style="background-color: #FF0000" onclick="selectColor(2)"></div>
-    </div>
+    <div id="tasks"></div>
 
     <script>
-        const grid = document.getElementById('grid');
-        const colorChoices = document.getElementById('colorChoices');
-        const colors = ['#FFFF00', '#FFA500', '#FF0000']; // Κίτρινο, Πορτοκαλί, Κόκκινο
-        let moods = [];
-        let selectedDay = -1;
+        const tasksDiv = document.getElementById('tasks');
+        let tasks = {};
 
         // Λειτουργίες για cookies
         function setCookie(name, value) {
@@ -82,89 +76,80 @@
         }
 
         // Φόρτωση από cookie
-        moods = getCookie('moods') || [];
+        tasks = getCookie('tasks') || {};
 
-        // Εμφάνιση πλέγματος
-        function renderGrid() {
-            grid.innerHTML = '';
-            moods.forEach((mood, index) => {
-                const day = document.createElement('div');
-                day.className = 'day';
-                day.style.backgroundColor = colors[mood.state];
-                day.title = new Date(mood.date).toLocaleDateString('el-GR');
-                day.dataset.index = index;
-                day.addEventListener('click', showColorChoices);
-                grid.appendChild(day);
+        // Εμφάνιση εργασιών
+        function renderTasks() {
+            tasksDiv.innerHTML = '';
+            Object.keys(tasks).sort().forEach(date => {
+                const dayDiv = document.createElement('div');
+                dayDiv.className = 'day';
+                dayDiv.innerHTML = `
+                    <h3>${new Date(date).toLocaleDateString('el-GR')}
+                        <button class="delete-btn" onclick="confirmDeleteDay('${date}')">Διαγραφή Ημέρας</button>
+                    </h3>
+                `;
+
+                // Ταξινόμηση εργασιών κατά ώρα
+                tasks[date].sort((a, b) => a.time.localeCompare(b.time)).forEach((task, index) => {
+                    const taskDiv = document.createElement('div');
+                    taskDiv.className = 'task';
+                    taskDiv.innerHTML = `
+                        <span>${task.time} - ${task.text}</span>
+                        <button class="delete-btn" onclick="confirmDeleteTask('${date}', ${index})">Διαγραφή</button>
+                    `;
+                    dayDiv.appendChild(taskDiv);
+                });
+
+                tasksDiv.appendChild(dayDiv);
             });
-            updateLegend();
         }
 
-        // Ενημέρωση λεζάντας
-        function updateLegend() {
-            const legend = document.getElementById('legend');
-            legend.innerHTML = moods.map(mood => 
-                `<span style="color: ${colors[mood.state]}">■</span> ${new Date(mood.date).toLocaleDateString('el-GR')}`
-            ).join('<br>');
-            if (moods.length === 0) {
-                legend.innerHTML = 'Πρόσθεσε την πρώτη σου ημέρα!';
-            }
-        }
+        // Προσθήκη εργασίας
+        function addTask() {
+            const text = document.getElementById('taskInput').value;
+            const time = document.getElementById('taskTime').value;
+            const dateInput = document.getElementById('taskDate').value;
 
-        // Προσθήκη νέας ημέρας
-        function addNewDay() {
-            const today = new Date();
-            const latestDate = moods.length > 0 ? new Date(Math.max(...moods.map(m => new Date(m.date)))) : today;
-            const nextDate = new Date(latestDate);
-            nextDate.setDate(nextDate.getDate() + 1);
-
-            moods.push({ date: nextDate.toISOString(), state: 0 }); // Ξεκινά με κίτρινο
-            setCookie('moods', moods); // Αποθήκευση στο cookie
-            renderGrid();
-        }
-
-        // Εμφάνιση επιλογών χρώματος
-        function showColorChoices(e) {
-            selectedDay = parseInt(e.target.dataset.index);
-            const rect = e.target.getBoundingClientRect();
-            colorChoices.style.left = `${rect.left + window.scrollX}px`;
-            colorChoices.style.top = `${rect.bottom + window.scrollY}px`;
-            colorChoices.style.display = 'block';
-        }
-
-        // Επιλογή χρώματος
-        function selectColor(state) {
-            if (selectedDay !== -1) {
-                moods[selectedDay].state = state;
-                setCookie('moods', moods); // Ενημέρωση cookie
-                renderGrid();
-            }
-            colorChoices.style.display = 'none';
-            selectedDay = -1;
-        }
-
-        // Διαγραφή με επιβεβαίωση
-        function confirmDelete() {
-            if (moods.length === 0) {
-                alert('Δεν υπάρχουν εγγραφές για διαγραφή!');
+            if (!text || !time || !dateInput) {
+                alert('Παρακαλώ συμπλήρωσε εργασία, ώρα και ημερομηνία!');
                 return;
             }
-            if (confirm('Είσαι σίγουρος ότι θέλεις να διαγράψεις όλες τις εγγραφές;')) {
-                moods = [];
-                setCookie('moods', moods); // Ενημέρωση cookie με κενή λίστα
-                renderGrid();
+
+            const date = new Date(dateInput).toISOString().split('T')[0];
+            if (!tasks[date]) tasks[date] = [];
+            tasks[date].push({ text, time });
+
+            setCookie('tasks', tasks); // Αποθήκευση στο cookie
+            renderTasks();
+
+            // Καθαρισμός φόρμας
+            document.getElementById('taskInput').value = '';
+            document.getElementById('taskTime').value = '';
+            document.getElementById('taskDate').value = '';
+        }
+
+        // Διαγραφή εργασίας με επιβεβαίωση
+        function confirmDeleteTask(date, index) {
+            if (confirm(`Είσαι σίγουρος ότι θέλεις να διαγράψεις την εργασία "${tasks[date][index].text}" στις ${tasks[date][index].time};`)) {
+                tasks[date].splice(index, 1);
+                if (tasks[date].length === 0) delete tasks[date]; // Διαγραφή ημέρας αν δεν έχει εργασίες
+                setCookie('tasks', tasks); // Ενημέρωση cookie
+                renderTasks();
             }
         }
 
-        // Κλείσιμο επιλογών χρώματος αν κάνεις κλικ αλλού
-        document.addEventListener('click', (e) => {
-            if (!colorChoices.contains(e.target) && !e.target.classList.contains('day')) {
-                colorChoices.style.display = 'none';
-                selectedDay = -1;
+        // Διαγραφή ημέρας με επιβεβαίωση
+        function confirmDeleteDay(date) {
+            if (confirm(`Είσαι σίγουρος ότι θέλεις να διαγράψεις όλες τις εργασίες της ${new Date(date).toLocaleDateString('el-GR')} (${tasks[date].length} εργασίες);`)) {
+                delete tasks[date];
+                setCookie('tasks', tasks); // Ενημέρωση cookie
+                renderTasks();
             }
-        });
+        }
 
         // Αρχική εμφάνιση
-        renderGrid();
+        renderTasks();
     </script>
 </body>
 </html>
