--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         .delete-btn:hover {
             background: #cc0000;
         }
+        #debug {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -58,20 +62,28 @@
         <button onclick="addTask()">Προσθήκη Εργασίας</button>
     </div>
     <div id="tasks"></div>
+    <div id="debug"></div>
 
     <script>
         const tasksDiv = document.getElementById('tasks');
+        const debugDiv = document.getElementById('debug');
         let tasks = {};
 
         // Λειτουργίες για cookies
         function setCookie(name, value) {
-            document.cookie = `${name}=${encodeURIComponent(JSON.stringify(value))}; path=/`; // Μόνιμο cookie
+            const cookieValue = encodeURIComponent(JSON.stringify(value));
+            document.cookie = `${name}=${cookieValue}; path=/; SameSite=Lax`; // Χωρίς expires, μόνιμο
+            debugDiv.innerText = `Cookie ενημερώθηκε: ${document.cookie}`; // Debugging
         }
 
         function getCookie(name) {
             const value = `; ${document.cookie}`;
             const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return JSON.parse(decodeURIComponent(parts.pop().split(';').shift()));
+            if (parts.length === 2) {
+                const cookieData = decodeURIComponent(parts.pop().split(';').shift());
+                debugDiv.innerText = `Cookie φορτώθηκε: ${cookieData}`;
+                return JSON.parse(cookieData);
+            }
             return null;
         }
 
@@ -90,7 +102,7 @@
                     </h3>
                 `;
 
-                // Ταξινόμηση εργασιών κατά ώρα
+                // Ταξινόμηση κατά ώρα
                 tasks[date].sort((a, b) => a.time.localeCompare(b.time)).forEach((task, index) => {
                     const taskDiv = document.createElement('div');
                     taskDiv.className = 'task';
@@ -107,7 +119,7 @@
 
         // Προσθήκη εργασίας
         function addTask() {
-            const text = document.getElementById('taskInput').value;
+            const text = document.getElementById('taskInput').value.trim();
             const time = document.getElementById('taskTime').value;
             const dateInput = document.getElementById('taskDate').value;
 
@@ -120,7 +132,7 @@
             if (!tasks[date]) tasks[date] = [];
             tasks[date].push({ text, time });
 
-            setCookie('tasks', tasks); // Αποθήκευση στο cookie
+            setCookie('tasks', tasks); // Ενημέρωση cookie
             renderTasks();
 
             // Καθαρισμός φόρμας
@@ -133,7 +145,7 @@
         function confirmDeleteTask(date, index) {
             if (confirm(`Είσαι σίγουρος ότι θέλεις να διαγράψεις την εργασία "${tasks[date][index].text}" στις ${tasks[date][index].time};`)) {
                 tasks[date].splice(index, 1);
-                if (tasks[date].length === 0) delete tasks[date]; // Διαγραφή ημέρας αν δεν έχει εργασίες
+                if (tasks[date].length === 0) delete tasks[date];
                 setCookie('tasks', tasks); // Ενημέρωση cookie
                 renderTasks();
             }
